--- a/wwwroot/css/bootstrap_yeti_theme.css
+++ b/wwwroot/css/bootstrap_yeti_theme.css
@@ -2576,7 +2576,6 @@ textarea.form-control-lg {
 	-moz-appearance: none;
 	appearance: none;
 	-webkit-print-color-adjust: exact;
-	color-adjust: exact;
 	print-color-adjust: exact;
 }
 
@@ -3174,7 +3173,7 @@ textarea.form-control-lg {
 .btn {
 	--bs-btn-padding-x: 0.5rem;
 	--bs-btn-padding-y: 0.375rem;
-	--bs-btn-font-family:;
+	--bs-btn-font-family: default;
 	--bs-btn-font-size: 1rem;
 	--bs-btn-font-weight: 300;
 	--bs-btn-line-height: 1.5;
@@ -3952,7 +3951,7 @@ textarea.form-control-lg {
 	--bs-dropdown-color: #dee2e6;
 	--bs-dropdown-bg: #333;
 	--bs-dropdown-border-color: rgba(0, 0, 0, 0.1);
-	--bs-dropdown-box-shadow:;
+	--bs-dropdown-box-shadow: default
 	--bs-dropdown-link-color: #dee2e6;
 	--bs-dropdown-link-hover-color: #fff;
 	--bs-dropdown-divider-bg: rgba(0, 0, 0, 0.1);
@@ -4078,7 +4077,7 @@ textarea.form-control-lg {
 .nav {
 	--bs-nav-link-padding-x: 1rem;
 	--bs-nav-link-padding-y: 0.5rem;
-	--bs-nav-link-font-weight:;
+	--bs-nav-link-font-weight: default;
 	--bs-nav-link-color: var(--bs-link-color);
 	--bs-nav-link-hover-color: var(--bs-link-hover-color);
 	--bs-nav-link-disabled-color: #ccc;
@@ -4267,7 +4266,7 @@ textarea.form-control-lg {
 .navbar-nav {
 	--bs-nav-link-padding-x: 0;
 	--bs-nav-link-padding-y: 0.5rem;
-	--bs-nav-link-font-weight:;
+	--bs-nav-link-font-weight: default;
 	--bs-nav-link-color: var(--bs-navbar-color);
 	--bs-nav-link-hover-color: var(--bs-navbar-hover-color);
 	--bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
@@ -4706,14 +4705,14 @@ textarea.form-control-lg {
 	--bs-card-border-width: 1px;
 	--bs-card-border-color: var(--bs-border-color-translucent);
 	--bs-card-border-radius: 0;
-	--bs-card-box-shadow:;
+	--bs-card-box-shadow: default;
 	--bs-card-inner-border-radius: 0;
 	--bs-card-cap-padding-y: 0.5rem;
 	--bs-card-cap-padding-x: 1rem;
 	--bs-card-cap-bg: rgba(0, 0, 0, 0.03);
-	--bs-card-cap-color:;
-	--bs-card-height:;
-	--bs-card-color:;
+	--bs-card-cap-color: default;
+	--bs-card-height: default;
+	--bs-card-color: default;
 	--bs-card-bg: #fff;
 	--bs-card-img-overlay-padding: 1rem;
 	--bs-card-group-margin: 0.75rem;
@@ -5054,7 +5053,7 @@ textarea.form-control-lg {
 	--bs-breadcrumb-padding-x: 0.75rem;
 	--bs-breadcrumb-padding-y: 0.375rem;
 	--bs-breadcrumb-margin-bottom: 1rem;
-	--bs-breadcrumb-bg:;
+	--bs-breadcrumb-bg: default;
 	--bs-breadcrumb-border-radius: 3px;
 	--bs-breadcrumb-divider-color: #888;
 	--bs-breadcrumb-item-padding-x: 0.5rem;
@@ -5843,7 +5842,7 @@ textarea.form-control-lg {
 	--bs-toast-spacing: 1.5rem;
 	--bs-toast-max-width: 350px;
 	--bs-toast-font-size: 0.875rem;
-	--bs-toast-color:;
+	--bs-toast-color: default;
 	--bs-toast-bg: rgba(255, 255, 255, 0.85);
 	--bs-toast-border-width: 1px;
 	--bs-toast-border-color: var(--bs-border-color-translucent);
@@ -5914,7 +5913,7 @@ textarea.form-control-lg {
 	--bs-modal-width: 500px;
 	--bs-modal-padding: 1rem;
 	--bs-modal-margin: 0.5rem;
-	--bs-modal-color:;
+	--bs-modal-color: default;
 	--bs-modal-bg: #fff;
 	--bs-modal-border-color: var(--bs-border-color-translucent);
 	--bs-modal-border-width: 1px;
@@ -5928,7 +5927,7 @@ textarea.form-control-lg {
 	--bs-modal-header-border-width: 1px;
 	--bs-modal-title-line-height: 1.5;
 	--bs-modal-footer-gap: 0.5rem;
-	--bs-modal-footer-bg:;
+	--bs-modal-footer-bg: default;
 	--bs-modal-footer-border-color: var(--bs-border-color);
 	--bs-modal-footer-border-width: 1px;
 	position: fixed;
@@ -6244,7 +6243,7 @@ textarea.form-control-lg {
 	--bs-tooltip-max-width: 200px;
 	--bs-tooltip-padding-x: 0.5rem;
 	--bs-tooltip-padding-y: 0.25rem;
-	--bs-tooltip-margin:;
+	--bs-tooltip-margin: default;
 	--bs-tooltip-font-size: 0.875rem;
 	--bs-tooltip-color: #fff;
 	--bs-tooltip-bg: #000;
@@ -6362,7 +6361,7 @@ textarea.form-control-lg {
 	--bs-popover-header-padding-x: 1rem;
 	--bs-popover-header-padding-y: 0.5rem;
 	--bs-popover-header-font-size: 1rem;
-	--bs-popover-header-color:;
+	--bs-popover-header-color: default;
 	--bs-popover-header-bg: #f0f0f0;
 	--bs-popover-body-padding-x: 1rem;
 	--bs-popover-body-padding-y: 1rem;
@@ -6810,7 +6809,7 @@ textarea.form-control-lg {
 	--bs-offcanvas-height: 30vh;
 	--bs-offcanvas-padding-x: 1rem;
 	--bs-offcanvas-padding-y: 1rem;
-	--bs-offcanvas-color:;
+	--bs-offcanvas-color: default;
 	--bs-offcanvas-bg: #fff;
 	--bs-offcanvas-border-width: 1px;
 	--bs-offcanvas-border-color: var(--bs-border-color-translucent);
